--- a/eventyay/control/templates/control/event_clear.html
+++ b/eventyay/control/templates/control/event_clear.html
@@ -7,7 +7,7 @@
     {% csrf_token %}
     <label>
         <input type="checkbox" required>
-        {% trans "Delete statistics, feedback, chat messages, questions, …" %}
+        {% trans "Delete statistics, systemlog, chat messages, questions, …" %}
     </label>
     <label>
         <input type="checkbox" required>
