Fix: Implemented Session, Multiday checkin-out feature.

--- a/src/pretix/control/templates/pretixcontrol/checkin/index.html
+++ b/src/pretix/control/templates/pretixcontrol/checkin/index.html
@@ -38,11 +38,14 @@
         <div class="col-md-4 col-sm-6 col-xs-12">
             {% bootstrap_field filter_form.user layout='inline' %}
         </div>
-        <div class="col-md-3 col-sm-6 col-xs-12">
+        <div class="col-md-2 col-sm-6 col-xs-12">
             {% bootstrap_field filter_form.status layout='inline' %}
         </div>
-        <div class="col-md-3 col-sm-6 col-xs-12">
+        <div class="col-md-2 col-sm-6 col-xs-12">
             {% bootstrap_field filter_form.item layout='inline' %}
+        </div>
+        <div class="col-md-2 col-sm-6 col-xs-12">
+            {% bootstrap_field filter_form.date layout='inline' %}
         </div>
         <div class="col-md-2 col-sm-6 col-xs-12">
             <button class="btn btn-primary btn-block" type="submit">
