--- a/app/eventyay/presale/templates/pretixpresale/index.html
+++ b/app/eventyay/presale/templates/pretixpresale/index.html
@@ -1,4 +1,4 @@
-{% extends "pretixcontrol/auth/base.html" %}
+{% extends "eventyay_common/auth/base.html" %}
 {% load bootstrap3 %}
 {% load i18n %}
 {% load static %}
