--- a/app/eventyay/orga/templates/orga/submission/list.html
+++ b/app/eventyay/orga/templates/orga/submission/list.html
@@ -37,13 +37,13 @@
         <p class="flip ml-auto">
             <div>
                 {% if can_send_mails %}
-                    <a class="btn btn-outline-info mt-2" href="{{ request.event.orga_urls.compose_mails_sessions }}{% querystring page='' %}">
+                    <a class="btn btn-outline-info mt-2" href="{{ request.event.orga_urls.compose_mails_sessions }}">
                         <i class="fa fa-envelope"></i>
                         {% translate "Send email" %}
                     </a>
                 {% endif %}
                 {% if pending_changes and can_change_submission %}
-                    <a class="btn btn-info mt-2" href="{{ request.event.orga_urls.apply_pending }}{% querystring %}">
+                    <a class="btn btn-info mt-2" href="{{ request.event.orga_urls.apply_pending }}">
                         {% translate "Apply pending changes" %} ({{ pending_changes }})
                     </a>
                 {% endif %}
@@ -70,33 +70,33 @@
                 <tr>
                     <th>
                         {% if request.event|get_feature_flag:"use_tracks" and filter_form.track %}
-                            <a href="{% querystring sort="track__name" %}"><i class="fa fa-caret-down" title="{% translate "Sort (a-z)" %}"></i></a>
-                            <a href="{% querystring sort="-track__name" %}"><i class="fa fa-caret-up" title="{% translate "Sort (z-a)" %}"></i></a>
+                            <a href=""><i class="fa fa-caret-down" title="{% translate "Sort (a-z)" %}"></i></a>
+                            <a href=""><i class="fa fa-caret-up" title="{% translate "Sort (z-a)" %}"></i></a>
                         {% endif %}
                     </th>
                     <th>
                         {% translate "Title" %}
-                        <a href="{% querystring sort="title" %}"><i class="fa fa-caret-down" title="{% translate "Sort (a-z)" %}"></i></a>
-                        <a href="{% querystring sort="-title" %}"><i class="fa fa-caret-up" title="{% translate "Sort (z-a)" %}"></i></a>
+                        <a href=""><i class="fa fa-caret-down" title="{% translate "Sort (a-z)" %}"></i></a>
+                        <a href=""><i class="fa fa-caret-up" title="{% translate "Sort (z-a)" %}"></i></a>
                     </th>
                     {% if can_view_speakers %}<th>{{ phrases.schedule.speakers }}</th>{% endif %}
                     {% if show_submission_types %}
                         <th>
                             {% translate "Type" %}
-                            <a href="{% querystring sort="submission_type__name" %}"><i class="fa fa-caret-down" title="{% translate "Sort (a-z)" %}"></i></a>
-                            <a href="{% querystring sort="-submission_type__name" %}"><i class="fa fa-caret-up" title="{% translate "Sort (z-a)" %}"></i></a>
+                            <a href=""><i class="fa fa-caret-down" title="{% translate "Sort (a-z)" %}"></i></a>
+                            <a href=""><i class="fa fa-caret-up" title="{% translate "Sort (z-a)" %}"></i></a>
                         </th>
                     {% endif %}
                     <th>
                         {% translate "State" %}
-                        <a href="{% querystring sort="state" %}"><i class="fa fa-caret-down" title="{% translate "Sort (a-z)" %}"></i></a>
-                        <a href="{% querystring sort="-state" %}"><i class="fa fa-caret-up" title="{% translate "Sort (z-a)" %}"></i></a>
+                        <a href=""><i class="fa fa-caret-down" title="{% translate "Sort (a-z)" %}"></i></a>
+                        <a href=""><i class="fa fa-caret-up" title="{% translate "Sort (z-a)" %}"></i></a>
                     </th>
                     {% if can_change_submission %}
                         <th>
                             {% translate "Featured" %} <i class="fa fa-question-circle" data-toggle="tooltip" title="{% translate "Show this session on the list of featured sessions, once it was accepted" %}"></i>
-                            <a href="{% querystring sort="-is_featured" %}"><i class="fa fa-caret-down"></i></a>
-                            <a href="{% querystring sort="is_featured" %}"><i class="fa fa-caret-up"></i></a>
+                            <a href=""><i class="fa fa-caret-down"></i></a>
+                            <a href=""><i class="fa fa-caret-up"></i></a>
                         </th>
                         <th></th>
                     {% endif %}
