--- a/app/eventyay/orga/templates/orga/includes/pagination.html
+++ b/app/eventyay/orga/templates/orga/includes/pagination.html
@@ -7,9 +7,9 @@
             {% if is_paginated %}
                 {% if page_obj.has_previous %}
                     <li class="page-item">
-                        {% comment %} <a rel="prev" href="{% querystring page=page_obj.previous_page_number %}" class="page-link"> {% endcomment %}
-                            {% comment %} <span>«</span>
-                        </a> {% endcomment %}
+                        <a rel="prev" href="{% querystring page=page_obj.previous_page_number %}" class="page-link">
+                            <span>«</span>
+                        </a>
                     </li>
                 {% endif %}
                 <li class="page-current page-item disabled">
@@ -21,9 +21,9 @@
                 </li>
                 {% if page_obj.has_next %}
                     <li class="page-item">
-                        {% comment %} <a rel="next" href="{% querystring page=page_obj.next_page_number %}" class="page-link"> {% endcomment %}
-                            {% comment %} <span>»</span>
-                        </a> {% endcomment %}
+                        <a rel="next" href="{% querystring page=page_obj.next_page_number %}" class="page-link">
+                            <span>»</span>
+                        </a>
                     </li>
                 {% endif %}
             {% else %}
