product to item rename-2

--- a/app/eventyay/control/templates/pretixcontrol/event/fragment_info_box.html
+++ b/app/eventyay/control/templates/pretixcontrol/event/fragment_info_box.html
@@ -1,5 +1,5 @@
 {% load i18n %}
-<div class="panel panel-default products widget-container widget-small no-padding last-column">
+<div class="panel panel-default items widget-container widget-small no-padding last-column">
     <div class="panel-heading">
         <h3 class="panel-title">
             {% trans "Event organizer" %}
