--- a/app/eventyay/control/templates/pretixcontrol/event/index.html
+++ b/app/eventyay/control/templates/pretixcontrol/event/index.html
@@ -147,7 +147,7 @@
     </div>
 
     <p>&nbsp;</p>
-    <div class="panel panel-default products">
+    <div class="panel panel-default items">
         <div class="panel-heading">
             <h3 class="panel-title">
                 {% trans "Internal comment" %}
