--- a/app/eventyay/control/templates/pretixcontrol/event/mail_settings_fragment.html
+++ b/app/eventyay/control/templates/pretixcontrol/event/mail_settings_fragment.html
@@ -11,32 +11,32 @@
     <div id="{{ pid }}">
         <div class="panel-body">
             {% with exclude|split as exclusion %}
-            {% with products|split as product_list %}
-            {% for product in product_list %}
-                {% if product in exclusion and form|hasattr:product %}
-                    {% with form|getattr:product as field %}
+            {% with items|split as item_list %}
+            {% for item in item_list %}
+                {% if item in exclusion and form|hasattr:item %}
+                    {% with form|getattr:item as field %}
                         {% bootstrap_field field layout="horizontal" %}
                     {% endwith %}
-                {% elif form|hasattr:product %}
-                    <div id="{{ product }}_panel" class="preview-panel form-group" for="{{ product }}">
-                        {% with form|getattr:product as field %}
+                {% elif form|hasattr:item %}
+                    <div id="{{ item }}_panel" class="preview-panel form-group" for="{{ item }}">
+                        {% with form|getattr:item as field %}
                         <label class="col-md-3 control-label">{{ field.label }}</label>
                         <div class="col-md-9">
                             <ul class="nav nav-tabs">
                                 <li role="presentation" class="active">
-                                    <a data-toggle="tab" type="edit" href="#{{ product }}_edit"><i class="fa fa-pencil-square-o fa-fw"></i> {% trans "Edit" %}</a>
+                                    <a data-toggle="tab" type="edit" href="#{{ item }}_edit"><i class="fa fa-pencil-square-o fa-fw"></i> {% trans "Edit" %}</a>
                                 </li>
                                 <li role="presentation">
-                                    <a data-toggle="tab" type="preview" href="#{{ product }}_preview"><i class="fa fa-tv fa-fw"></i> {% trans "Preview" %}</a>
+                                    <a data-toggle="tab" type="preview" href="#{{ item }}_preview"><i class="fa fa-tv fa-fw"></i> {% trans "Preview" %}</a>
                                 </li>
                             </ul>
                             <div class="tab-content">
-                                <div id="{{ product }}_edit" class="tab-pane fade in active">
+                                <div id="{{ item }}_edit" class="tab-pane fade in active">
                                     {% bootstrap_field field show_label=False form_group_class="" %}
                                 </div>
-                                <div id="{{ product }}_preview" class="tab-pane mail-preview-group">
+                                <div id="{{ item }}_preview" class="tab-pane mail-preview-group">
                                     {% for l in request.event.settings.locales %}
-                                        <div lang="{{ l }}" for="{{ product }}" class="mail-preview"></div>
+                                        <div lang="{{ l }}" for="{{ item }}" class="mail-preview"></div>
                                     {% endfor %}
                                 </div>
                             </div>
