--- a/app/eventyay/orga/templates/orga/user.html
+++ b/app/eventyay/orga/templates/orga/user.html
@@ -169,5 +169,5 @@
 
     {% endif %}
 
-    {% html_signal "pretalx.common.signals.profile_bottom_html" sender=request.event user=user orga="true" %}
+    {% html_signal "eventyay.common.signals.profile_bottom_html" sender=request.event user=user orga="true" %}
 {% endblock content %}
