--- a/app/eventyay/common/templates/common/auth.html
+++ b/app/eventyay/common/templates/common/auth.html
@@ -32,7 +32,7 @@
                     {{ login_button_label }}
                 </a>
             </div>
-            {% html_signal "pretalx.common.signals.auth_html" sender=request.event request=request next_url=success_url %}
+            {% html_signal "eventyay.common.signals.auth_html" sender=request.event request=request next_url=success_url %}
         </div>
     {% endif %}
     {% if not hide_register %}
