--- a/app/eventyay/control/templates/control/index.html
+++ b/app/eventyay/control/templates/control/index.html
@@ -1,5 +1,7 @@
-{% extends "control/base.html" %}
+{% extends "pretixcontrol/admin/base.html" %}
+{% load i18n %}
 
-{% block content %}
-kommt bald
+{% block video_admin_content %}
+<h1 class="page-header">{% trans "Video admin dashboard" %}</h1>
+<p class="text-muted">{% trans "More insights coming soon." %}</p>
 {% endblock %}
