--- a/app/eventyay/control/templates/control/base.html
+++ b/app/eventyay/control/templates/control/base.html
@@ -1,84 +1,16 @@
-{% load i18n %}
+{% extends "eventyay_common/base.html" %}
 {% load static %}
-<html>
-  <head>
-    <title>{% block title %}{% endblock %} :: eventyay</title>
+{% load i18n %}
+{# Reusing the common dashboard layout. This template is now a thin wrapper so all child templates automatically gain the unified navigation/sidebar/header. #}
+
+{% block custom_header %}
+    {{ block.super }}
     <link rel="stylesheet" href="{% static 'control/style.css' %}">
-    <script src="{% static 'control/jquery-3.6.0.js' %}"></script>
-    <script src="{% static 'js/jquery.formset.js' %}"></script>
-  </head>
-  <body>
-    <header>
-        <a href="{% url 'control:index' %}">
-            <img src="{% static 'images/eventyay-video-logo.png' %}" alt="eventyay-video-logo" height="35">
-        </a>
-        <div class="user-links">
-            {% if request.user.is_authenticated %}
-                <span style="margin-right: 12px; font-weight: bold;">
-                    {{ request.user.email }}
-                </span>
-                <a href="{% url 'control:auth.profile' %}">{% trans "Profile" %}</a>
-                <a href="/logout">{% trans "Logout" %}</a>
-            {% else %}
-                <a href="/login">{% trans "Login" %}</a>
-            {% endif %}
-        </div>
-    </header>
-    <div id="main-container">
-      <nav>
-        {% if request.user.is_authenticated and request.user.is_staff %}
-                <a href="{% url "control:index" %}"{% if request.path == "/control/" %} class="active" {% endif %}>
-            {% trans "Dashboard" %}
-          </a>
-          <a href="{% url "control:event.list" %}"{% if request.path == "/control/events/" %} class="active"{% endif %}>
-            {% trans "Events" %}
-          </a>
-          <a href="{% url "control:bbbserver.list" %}"{% if request.path == "/control/bbbs/" %} class="active"{% endif %}>
-            {% trans "BBB servers" %}
-          </a>
-          <a href="{% url "control:bbbserver.moveroom" %}"{% if request.path == "/control/bbbs/moveroom/" %} class="active"{% endif %}>
-            {% trans "Move BBB room" %}
-          </a>
-          <a href="{% url "control:turnserver.list" %}"{% if request.path == "/control/turns/" %} class="active"{% endif %}>
-            {% trans "TURN servers" %}
-          </a>
-          <a href="{% url "control:janusserver.list" %}"{% if request.path == "/control/janus/" %} class="active"{% endif %}>
-            {% trans "Janus servers" %}
-          </a>
-          <a href="{% url "control:streamingserver.list" %}"{% if request.path == "/control/streamingservers/" %} class="active"{% endif %}>
-            {% trans "Streaming servers" %}
-          </a>
-          <a href="{% url "control:streamkey" %}"{% if request.path == "/control/streamkey/" %} class="active"{% endif %}>
-            {% trans "Streamkey generator" %}
-          </a>
-          <a href="{% url "control:systemlog.list" %}"{% if request.path == "/control/systemlog/" %} class="active"{% endif %}>
-            {% trans "SystemLog" %}
-          </a>
-          <a href="{% url "control:conftool.syncposters" %}"{% if request.path == "/control/conftool/syncposters/" %} class="active"{% endif %}>
-            {% trans "Conftool posters" %}
-          </a>
-          {% if request.user.is_superuser %}
-            <a href="{% url "control:user.list" %}"{% if request.path == "/control/users/" %} class="active"{% endif %}>
-              {% trans "Users" %}
-            </a>
-          {% endif %}
-        {% endif %}
-      </nav>
-      <main>
+{% endblock %}
 
-        {% if messages %}
-          <ul class="messages">
-            {% for message in messages %}
-              <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
-            {% endfor %}
-          </ul>
-        {% endif %}
+{% block title %}{% block page_title %}{% endblock %}{% endblock %}
 
-        {% block content %}
-
-        {% endblock %}
-
-      </main>
-    </div>
-  </body>
-</html>
+{# Child templates already define "content"; eventyay_common/base.html provides the surrounding layout and messages. #}
+{% block content %}
+    {{ block.super }}
+{% endblock %}
