--- a/app/eventyay/control/templates/control/bbb_list.html
+++ b/app/eventyay/control/templates/control/bbb_list.html
@@ -1,33 +1,33 @@
-{% extends "control/base.html" %}
+{% extends "pretixcontrol/admin/base.html" %}
 {% load i18n %}
 
-{% block content %}
+{% block video_admin_content %}
+<div class="video-admin-header">
+    <h1 class="page-header">{% trans "BBB servers" %}</h1>
+    <div class="video-admin-actions-right">
+        <a href="{% url 'control:bbbserver.create' %}" class="btn btn-primary btn-sm" aria-label="{% trans 'Add new BBB server' %}">
+            <span class="fa fa-plus" aria-hidden="true"></span> {% trans "Add new server" %}
+        </a>
+    </div>
+</div>
 
-<p>
-    <a href="{% url "control:bbbserver.create" %}" class="btn">
-    {% trans "Add new server" %}
-    </a>
-</p>
-<table>
+
+<div class="video-admin-table-wrapper">
+<table class="table table-striped table-hover video-admin-table">
     <thead>
     <tr>
         <th>{% trans "ID" %}</th>
         <th>{% trans "URL" %}</th>
         <th>{% trans "Event" %}</th>
         <th class="text-right">{% trans "Current cost" %}</th>
-        <th></th>
-        <th></th>
+        <th class="text-right" colspan="2">{% trans "Actions" %}</th>
     </tr>
     </thead>
     <tbody>
     {% for s in servers %}
     <tr class="{% if not s.active %}deleted{% endif %}">
-        <td>
-            <b>{{ s.pk }}</b>
-        </td>
-        <td>
-            {{ s.url }}
-        </td>
+        <td><code>{{ s.pk }}</code></td>
+        <td>{{ s.url }}</td>
         <td>
             {% if s.event_exclusive %}
                 {{ s.event_exclusive }}
@@ -35,24 +35,23 @@
                 {% trans "All" %}
             {% endif %}
             {% if s.rooms_only %}
-                (rooms only)
+                <span class="label label-info">rooms only</span>
             {% endif %}
         </td>
-        <td class="text-right">
-            {{ s.cost }}
-        </td>
-        <td class="text-right">
-            <a href="{% url 'control:bbbserver.delete' pk=s.pk %}">
-                {% trans "Delete" %}
+        <td class="text-right">{{ s.cost }}</td>
+        <td class="text-right video-admin-actions">
+            <a href="{% url 'control:bbbserver.update' pk=s.pk %}" class="btn btn-default btn-xs">
+                <span class="fa fa-pencil"></span> {% trans "Edit" %}
             </a>
-        </td>
-        <td class="text-right">
-            <a href="{% url 'control:bbbserver.update' pk=s.pk %}">
-                {% trans "Edit" %}
+            <a href="{% url 'control:bbbserver.delete' pk=s.pk %}" class="btn btn-danger btn-xs">
+                <span class="fa fa-trash"></span> {% trans "Delete" %}
             </a>
         </td>
     </tr>
+    {% empty %}
+        <tr><td colspan="6" class="text-muted">{% trans "No servers configured yet." %}</td></tr>
     {% endfor %}
     </tbody>
 </table>
+</div>
 {% endblock %}
