--- a/app/eventyay/control/templates/control/bbb_moveroom.html
+++ b/app/eventyay/control/templates/control/bbb_moveroom.html
@@ -1,16 +1,18 @@
-{% extends "control/base.html" %}
+{% extends "pretixcontrol/admin/base.html" %}
 {% load i18n %}
 {% load formset_tags %}
 
-{% block content %}
-<h1>{% trans "Move a BBB room to a new server" %}</h1>
-
-<form method="post">
+{% block video_admin_content %}
+<h1 class="page-header">{% trans "Move a BBB room to a new server" %}</h1>
+<form method="post" class="form-horizontal">
     {% csrf_token %}
-    {{ form.as_p }}
-    <p class="messages warning">
+    <div class="form-body">{{ form.as_p }}</div>
+    <p class="alert alert-warning small">
         {% trans 'Moving a room will try to kick everyone out of the room. People need to re-join by reloading the page. If kicking people fails (i.e. server down), it will still proceed, but might create a "split" room, i.e. two groups of people who think they are in the same room but are not. Recordings of the room will be no longer accessible through the interface later. It is recommended to join the room yourself to be able to react to this. Use with caution.' %}
     </p>
-    <button type="submit">{% trans "Move" %}</button>
+    <div class="video-admin-btn-row">
+        <button type="submit" class="btn btn-warning"><span class="fa fa-exchange"></span> {% trans "Move" %}</button>
+        <a href="{% url 'control:bbbserver.list' %}" class="btn btn-default">{% trans "Cancel" %}</a>
+    </div>
 </form>
 {% endblock %}
