--- a/app/eventyay/control/templates/control/janus_delete.html
+++ b/app/eventyay/control/templates/control/janus_delete.html
@@ -1,10 +1,14 @@
-{% extends "control/base.html" %}
+{% extends "pretixcontrol/admin/base.html" %}
 {% load i18n %}
 
-{% block content %}
-<h1>{% trans "Delete Janus server" %}</h1>
-<form method="post">
+{% block video_admin_content %}
+<h1 class="page-header">{% trans "Delete Janus server" %}</h1>
+<form method="post" class="form-inline">
     {% csrf_token %}
-    <button type="submit">{% blocktrans with id=server.url %}Delete {{ id }}{% endblocktrans %}</button>
+    <p>{% blocktrans with id=server.url %}Are you sure you want to delete {{ id }}?{% endblocktrans %}</p>
+    <div class="video-admin-btn-row">
+        <button type="submit" class="btn btn-danger"><span class="fa fa-trash"></span> {% trans "Delete" %}</button>
+        <a href="{% url 'control:janusserver.list' %}" class="btn btn-default">{% trans "Cancel" %}</a>
+    </div>
 </form>
 {% endblock %}
