--- a/app/eventyay/control/templates/control/streaming_form.html
+++ b/app/eventyay/control/templates/control/streaming_form.html
@@ -1,14 +1,15 @@
-{% extends "control/base.html" %}
+{% extends "pretixcontrol/admin/base.html" %}
 {% load i18n %}
 {% load formset_tags %}
 
-{% block content %}
-<h1>{% trans "Create or update server" %}</h1>
-<form method="post">
+{% block video_admin_content %}
+<h1 class="page-header">{% trans "Create or update streaming server" %}</h1>
+<form method="post" class="form-horizontal">
     {% csrf_token %}
-    {{ form.as_p }}
-
-
-    <button type="submit">{% trans "Save" %}</button>
+    <div class="form-body">{{ form.as_p }}</div>
+    <div class="video-admin-btn-row">
+        <button type="submit" class="btn btn-primary"><span class="fa fa-save"></span> {% trans "Save" %}</button>
+        <a href="{% url 'control:streamingserver.list' %}" class="btn btn-default">{% trans "Cancel" %}</a>
+    </div>
 </form>
 {% endblock %}
