--- a/app/eventyay/control/templates/control/systemlog_detail.html
+++ b/app/eventyay/control/templates/control/systemlog_detail.html
@@ -1,25 +1,32 @@
-{% extends "control/base.html" %}
+{% extends "pretixcontrol/admin/base.html" %}
 {% load i18n %}
 
-{% block content %}
-
-<label>{% trans "Metadata" %}</label>
-<pre>{{ systemlog.timestamp }} / {{ systemlog.module }} / {{ systemlog.event }}</pre>
-<hr>
-<label>{% trans "Message" %}</label>
-<pre>{{ systemlog.message }}</pre>
-<hr>
-<label>{% trans "User Agent" %}</label>
-<pre>{{ trace.userAgent }}</pre>
-<hr>
-<label>{% trans "Trace" %}</label>
-<table>
+{% block video_admin_content %}
+<h1 class="page-header">{% trans "System log entry" %}</h1>
+<div class="panel panel-default">
+    <div class="panel-body">
+        <label>{% trans "Metadata" %}</label>
+        <pre>{{ systemlog.timestamp }} / {{ systemlog.module }} / {{ systemlog.event }}</pre>
+        <hr>
+        <label>{% trans "Message" %}</label>
+        <pre>{{ systemlog.message }}</pre>
+        <hr>
+        <label>{% trans "User Agent" %}</label>
+        <pre>{{ trace.userAgent }}</pre>
+    </div>
+</div>
+<h3>{% trans "Trace" %}</h3>
+<div class="video-admin-table-wrapper">
+<table class="table table-striped table-hover video-admin-table">
+    <thead>
     <tr>
         <th>{% trans "Tag" %}</th>
         <th>{% trans "Timestamp" %}</th>
         <th>{% trans "Level" %}</th>
         <th>{% trans "Message" %}</th>
     </tr>
+    </thead>
+    <tbody>
     {% for t in trace.trace %}
     <tr>
         <td>{{t.0}}</td>
@@ -27,6 +34,10 @@
         <td>{{t.2}}</td>
         <td class="break-all"><code>{{t.3}}</code></td>
     </tr>
+    {% empty %}
+        <tr><td colspan="4" class="text-muted">{% trans "No trace entries." %}</td></tr>
     {% endfor %}
+    </tbody>
 </table>
+</div>
 {% endblock %}
