--- a/app/eventyay/control/templates/control/turn_list.html
+++ b/app/eventyay/control/templates/control/turn_list.html
@@ -1,32 +1,28 @@
-{% extends "control/base.html" %}
+{% extends "pretixcontrol/admin/base.html" %}
 {% load i18n %}
 
-{% block content %}
-
-<p>
-    <a href="{% url "control:turnserver.create" %}" class="btn">
-    {% trans "Add new server" %}
+{% block video_admin_content %}
+<h1 class="page-header">{% trans "TURN servers" %}</h1>
+<div class="video-admin-btn-row">
+    <a href="{% url 'control:turnserver.create' %}" class="btn btn-primary btn-sm">
+        <span class="fa fa-plus"></span> {% trans "Add new server" %}
     </a>
-</p>
-<table>
+</div>
+<div class="video-admin-table-wrapper">
+<table class="table table-striped table-hover video-admin-table">
     <thead>
     <tr>
         <th>{% trans "ID" %}</th>
         <th>{% trans "Host name" %}</th>
         <th>{% trans "Event" %}</th>
-        <th></th>
-        <th></th>
+        <th class="text-right" colspan="2">{% trans "Actions" %}</th>
     </tr>
     </thead>
     <tbody>
     {% for s in servers %}
     <tr class="{% if not s.active %}deleted{% endif %}">
-        <td>
-            <b>{{ s.pk }}</b>
-        </td>
-        <td>
-            {{ s.hostname }}
-        </td>
+        <td><code>{{ s.pk }}</code></td>
+        <td>{{ s.hostname }}</td>
         <td>
             {% if s.event_exclusive %}
                 {{ s.event_exclusive }}
@@ -34,18 +30,19 @@
                 {% trans "All" %}
             {% endif %}
         </td>
-        <td class="text-right">
-            <a href="{% url 'control:turnserver.delete' pk=s.pk %}">
-                {% trans "Delete" %}
+        <td class="text-right video-admin-actions">
+            <a href="{% url 'control:turnserver.update' pk=s.pk %}" class="btn btn-default btn-xs">
+                <span class="fa fa-pencil"></span> {% trans "Edit" %}
             </a>
-        </td>
-        <td class="text-right">
-            <a href="{% url 'control:turnserver.update' pk=s.pk %}">
-                {% trans "Edit" %}
+            <a href="{% url 'control:turnserver.delete' pk=s.pk %}" class="btn btn-danger btn-xs">
+                <span class="fa fa-trash"></span> {% trans "Delete" %}
             </a>
         </td>
     </tr>
+    {% empty %}
+        <tr><td colspan="5" class="text-muted">{% trans "No servers configured yet." %}</td></tr>
     {% endfor %}
     </tbody>
 </table>
+</div>
 {% endblock %}
