--- a/app/eventyay/control/templates/control/user_list.html
+++ b/app/eventyay/control/templates/control/user_list.html
@@ -1,34 +1,35 @@
-{% extends "control/base.html" %}
+{% extends "pretixcontrol/admin/base.html" %}
 {% load i18n %}
 
-{% block content %}
-
-<p>
-    <a href="{% url "control:auth.signup" %}" class="btn">
-    {% trans "Add new user" %}
+{% block video_admin_content %}
+<h1 class="page-header">{% trans "Users" %}</h1>
+<div class="video-admin-btn-row">
+    <a href="{% url 'control:auth.signup' %}" class="btn btn-primary btn-sm">
+        <span class="fa fa-user-plus"></span> {% trans "Add new user" %}
     </a>
-</p>
-<table>
+</div>
+<div class="video-admin-table-wrapper">
+<table class="table table-striped table-hover video-admin-table">
     <thead>
     <tr>
         <th>{% trans "Email" %}</th>
-        <th></th>
+        <th class="text-right">{% trans "Actions" %}</th>
     </tr>
     </thead>
     <tbody>
     {% for user in users %}
     <tr>
-        <td>
-            <b>{{ user.email }}</b>
-        </td>
-
-        <td class="text-right">
-            <a href="{% url 'control:user.update' pk=user.pk %}">
-                {% trans "Edit" %}
+        <td><strong>{{ user.email }}</strong></td>
+        <td class="text-right video-admin-actions">
+            <a href="{% url 'control:user.update' pk=user.pk %}" class="btn btn-default btn-xs">
+                <span class="fa fa-pencil"></span> {% trans "Edit" %}
             </a>
         </td>
     </tr>
+    {% empty %}
+        <tr><td colspan="2" class="text-muted">{% trans "No users found." %}</td></tr>
     {% endfor %}
     </tbody>
 </table>
+</div>
 {% endblock %}
