--- a/app/eventyay/control/templates/control/user_update.html
+++ b/app/eventyay/control/templates/control/user_update.html
@@ -1,11 +1,14 @@
-{% extends "control/base.html" %}
+{% extends "pretixcontrol/admin/base.html" %}
 {% load i18n %}
 
-{% block content %}
-<h1>{% trans "Update user" %}</h1>
-<form method="post">
+{% block video_admin_content %}
+<h1 class="page-header">{% trans "Update user" %}</h1>
+<form method="post" class="form-horizontal">
     {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">{% trans "Save" %}</button>
+    <div class="form-body">{{ form.as_p }}</div>
+    <div class="video-admin-btn-row">
+        <button type="submit" class="btn btn-primary"><span class="fa fa-save"></span> {% trans "Save" %}</button>
+        <a href="{% url 'control:user.list' %}" class="btn btn-default">{% trans "Back" %}</a>
+    </div>
 </form>
 {% endblock %}
