--- a/app/eventyay/control/templates/pretixcontrol/admin/base.html
+++ b/app/eventyay/control/templates/pretixcontrol/admin/base.html
@@ -1,6 +1,13 @@
 {% extends "pretixcontrol/base.html" %}
-{% load i18n %}
+{% load i18n static %}
+{% block custom_header %}
+    {{ block.super }}
+    <link rel="stylesheet" href="{% static 'global/video_admin.css' %}">
+{% endblock %}
 {% block content %}
+<div class="video-admin-wrapper">
+    {% block video_admin_content %}{% endblock %}
+</div>
 {% endblock %}
 
 {% block nav_top_header %}
@@ -18,9 +25,8 @@
 {% block nav %}
     {% for nav in admin_nav_items %}
         <li>
-            <a href="{{ nav.url }}" {% if nav.active %}class="active"{% endif %}
-                    {% if nav.external %}target="_blank"{% endif %}
-                    {% if nav.children %}class="has-children"{% endif %}>
+            <a href="{{ nav.url }}" {% if nav.active %}class="active{% if nav.children %} has-children{% endif %}"{% elif nav.children %}class="has-children"{% endif %}
+                    {% if nav.external %}target="_blank"{% endif %}>
                 {% if nav.icon %}
                     {% if "<svg" in nav.icon %}
                         {{ nav.icon|safe }}
