admin panel height fixes

--- a/video/webapp/src/styles/common-ui.styl
+++ b/video/webapp/src/styles/common-ui.styl
@@ -29,6 +29,11 @@
 		font-weight: 600
 		margin-left: 16px
 
+.ui-form-actions-wrapper
+	position: fixed
+	bottom: 0
+	width: 100%
+
 .ui-form-body
 	flex: auto
 	display: flex
